--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.puninar.jakpark"
+        applicationId "hackjak.pantidev.tako"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -19,17 +19,17 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.android.gms:play-services-maps:11.6.2'
     implementation 'com.google.android.gms:play-services-maps:11.6.2'
     implementation 'com.google.android.gms:play-services-location:11.6.2'
     implementation 'cn.pedant.sweetalert:library:1.3'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation files('libs/PhotoUtil.jar')
 }
